--- a/labs/unit_01/jQuery/in-class-exercises/index.html
+++ b/labs/unit_01/jQuery/in-class-exercises/index.html
@@ -6,7 +6,19 @@
 </head>
 <body>
 
+  <div id="counter-container"></div>
 
+<form>
+	<input type='text' id='new-counter-name'>
+	<input type="number" id="new-counter-start-value">
+	<button id='add-new-counter'>submit</button>
+
+</form>
+
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="scripts/script.js"></script>
 </body>
 </html>
