static page practice

--- a/morning_exercises/psd-to-html/index.html
+++ b/morning_exercises/psd-to-html/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Luxo Rentals</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+    <article>
+        <div class= "article">
+            <img class="article-logo" src="images/logo.png">
+            <div class= "unsub">unsubscribe</div>
+        </div>
+    </article>
+</body>
+
 </html>
